Closed
Bug 1230700
Opened 5 years ago
Closed 5 years ago
"Assertion failure: !Failed(), at ErrorResult.h:103" - mozilla::dom::Notification::ShowInternal
Categories
(Core :: DOM: Core & HTML, defect)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
mozilla45
Tracking | Status | |
---|---|---|
firefox45 | --- | fixed |
People
(Reporter: jruderman, Assigned: bzbarsky)
References
Details
(Keywords: assertion, testcase)
Attachments
(3 files)
Assertion failure: !Failed(), at ErrorResult.h:103 This assertion was added recently: changeset: https://hg.mozilla.org/mozilla-central/rev/ecb3051bba08 user: Boris Zbarsky date: Fri Nov 20 16:29:41 2015 -0500 summary: Bug 1224007 part 6. Change MaybeSetPendingException to set the ErrorResult state to "not failed", just like SuppressException and StealNSResult already do, and assert in the destructor that the ErrorResult is not Failed().
Reporter | ||
Comment 1•5 years ago
|
||
![]() |
Assignee | |
Comment 2•5 years ago
|
||
Attachment #8696177 -
Flags: review?(bugs)
![]() |
Assignee | |
Updated•5 years ago
|
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
Updated•5 years ago
|
Attachment #8696177 -
Flags: review?(bugs) → review+
Comment 4•5 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/493f9c9164b7
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
Updated•2 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•