Bug 1230700.  Make Notification::ShowInternal explicitly suppress the exception from GetPermissionInternal.  r=smaug